[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-task-timer"
version = "0.1.1"
description = "Named timers for measuring multiple operations within a function or script"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["timer", "benchmark", "performance", "profiling", "task"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-task-timer"
Repository = "https://github.com/philiprehberger/py-task-timer"
Issues = "https://github.com/philiprehberger/py-task-timer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_task_timer"]
